--- a/Linear Algebra Done Outrageous/preamble.tex
+++ b/Linear Algebra Done Outrageous/preamble.tex
@@ -162,9 +162,9 @@
 }
 \makeatother
 
-%================================
-% Question BOX
-%================================
+% %================================
+% % Question BOX
+% %================================
 \makeatletter
 \newtcbtheorem{question}{Question}{enhanced,
 	breakable,
